Trying to solve 100vh on mobile devices problem [4]

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 }
 
 html {
+  height: -webkit-fill-available;
   overflow: hidden;
 }
 
@@ -35,7 +36,7 @@ main {
   flex-direction: column;
   gap: 5px;
   height: 100vh;
-  max-height: -webkit-fill-available;
+  min-height: -webkit-fill-available;
   width: 100vw;
 }
 
